fix: CodeAction should be resolved only when user click on QuickFix
Fixes #785

Signed-off-by: azerr <azerr@redhat.com>